--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="./css/css/styles.css" rel="stylesheet" type="text/css">
 <body>
+
   
+
+
+
+
+
+
+
+
+  <script src="./js/jQuery.js"></script>
+      <script src="./js/js/scripts.js"></script>
 </body>
 </html>
