added an id within the background image, added a logo within the id logo, added h1 tag with the information in html skeleton, added a paragraph with the information, added a mouse click logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="./css/css/styles.css" rel="stylesheet" type="text/css">
 <body>
-
+<img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg">
+<div id="logo">
+<img src="images/logo.png">
+<h1>WELCOME TO DELANI STUDIO</h1>
+<P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
+<img src="images/mouse_click.png">
+</div>
   
 
 
