added stylings to the background image

--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
 </head>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="./css/css/styles.css" rel="stylesheet" type="text/css">
+  <link href="styles.css" type="text/css" rel="stylesheet">
 <body>
-<img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg">
+    <div id="container">
+  <div class=main>
+<img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg" style="width:100%">
 <div id="logo">
 <img src="images/logo.png">
 <h1>WELCOME TO DELANI STUDIO</h1>
 <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
-<img src="images/mouse_click.png">
+
+</div>
+<div class="mouse">
+    <img src="images/mouse_click.png">
+
+
 </div>
   
-
+</div>
 
 
 
@@ -27,5 +35,6 @@
 
   <script src="./js/jQuery.js"></script>
       <script src="./js/js/scripts.js"></script>
+    </div>
 </body>
 </html>
