added paragraph in the html skeleton

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 <img src="images/logo.png">
 <h1>WELCOME TO DELANI STUDIO</h1>
 <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
-
 </div>
 <div class="mouse">
     <img src="images/mouse_click.png">
-
-
+</div> 
 </div>
-  
-</div>
+<h2>ABOUT US</h>
+  <p>When you work with us,you are a part of a team of committed collaborators.All aspects pf our software development process are integrated,interactive and agile.</p>
+  <p>Our approach unifies design ,development and products.</p>
 
 
 
