added color styling to h1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+
   <link href="./css/css/styles.css" rel="stylesheet" type="text/css">
   <link href="styles.css" type="text/css" rel="stylesheet">
 <body>
@@ -24,7 +24,8 @@
 </div>
 <h2>ABOUT US</h>
   <p>When you work with us,you are a part of a team of committed collaborators.All aspects pf our software development process are integrated,interactive and agile.</p>
-  <p>Our approach unifies design ,development and products.</p>
+  <p>Our approach unifies design ,development and product management to creat exceptional products.</p>
+  <p>We start each project by understanding your business goals,the users needs and the product requirements.Then we help translate them into effective and elegant solutions.</p>
 
 
 
