added break tags to the h1 in the landing page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg" style="width:100%">
 <div id="logo">
 <img src="images/logo.png">
-<h1>WELCOME TO DELANI STUDIO</h1>
+<h1>WELCOME<br>TO DELANI STUDIO</h1>
 <P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
 </div>
 <div class="mouse">
@@ -23,8 +23,7 @@
 </div> 
 </div>
 <h2>ABOUT US</h>
-  <p>When you work with us,you are a part of a team of committed collaborators.All aspects pf our software development process are integrated,interactive and agile.</p>
-  <p>Our approach unifies design ,development and product management to creat exceptional products.</p>
+  <p>When you work with us,you are a part of a team of committed collaborators.All aspects pf our software development process are integrated,interactive and agile.<br>Our approach unifies design ,development and product management to creat exceptional products.</p>
   <p>We start each project by understanding your business goals,the users needs and the product requirements.Then we help translate them into effective and elegant solutions.</p>
 
 
