added styling in p tag landing page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="logo">
 <img src="images/logo.png">
 <h1>WELCOME<br>TO DELANI STUDIO</h1>
-<P>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
+<P style="color: whitesmoke">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
 </div>
 <div class="mouse">
     <img src="images/mouse_click.png">
