--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
   <div class=main>
-<img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg" style="width:100%">
+<img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg" style="width:100%"><br><br><br>
 <div id="logo">
 <img src="images/logo.png">
 <h1>WELCOME<br>TO DELANI STUDIO</h1>
