--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
-
+<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
   <link href="./css/css/styles.css" rel="stylesheet" type="text/css">
   <link href="styles.css" type="text/css" rel="stylesheet">
 <body>
