added styling to the image display

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </div>
 <div class="mouse">
     <img src="images/mouse_click.png">
+    <a href="#about us"></a>
 </div> 
 </div>
 <h2>ABOUT US</h>
