--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h2>ABOUT US</h>
   <p>When you work with us,you are a part of a team of committed collaborators.All aspects pf our software development process are integrated,interactive and agile.<br>Our approach unifies design ,development and product management to creat exceptional products.</p>
   <p>We start each project by understanding your business goals,the users needs and the product requirements.Then we help translate them into effective and elegant solutions.</p>
-
+<img src="images/s_image.jpg">
 
 
 
