--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,34 +8,45 @@
   <title>Document</title>
 </head>
 <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-  <link href="./css/css/styles.css" rel="stylesheet" type="text/css">
-  <link href="styles.css" type="text/css" rel="stylesheet">
+<link href="./css/css/styles.css" rel="stylesheet" type="text/css">
+<link href="styles.css" type="text/css" rel="stylesheet">
+
 <body>
-    <div id="container">
-  <div class=main>
-<img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg" style="width:100%"><br><br><br>
-<div id="logo">
-<img src="images/logo.png">
-<h1>WELCOME<br>TO DELANI STUDIO</h1>
-<P style="color: whitesmoke">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
-</div>
-<div class="mouse">
-    <img src="images/mouse_click.png">
-    <a href="#about us"></a>
-</div> 
-</div>
-<h2>ABOUT US</h>
-  <p>When you work with us,you are a part of a team of committed collaborators.All aspects pf our software development process are integrated,interactive and agile.<br>Our approach unifies design ,development and product management to creat exceptional products.</p>
-  <p>We start each project by understanding your business goals,the users needs and the product requirements.Then we help translate them into effective and elegant solutions.</p><br><br><br>
-<img src="images/s_image.jpg"style="width:100%">
-
-
-
-
-
-
-  <script src="./js/jQuery.js"></script>
-      <script src="./js/js/scripts.js"></script>
+  <div id="container">
+    <div class=main>
+      <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg"
+        style="width:100%"><br><br><br>
+      <div id="logo">
+        <img src="images/logo.png">
+        <h1>WELCOME<br>TO DELANI STUDIO</h1>
+        <P style="color: whitesmoke">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
+      </div>
+      <div class="mouse">
+        <img src="images/mouse_click.png">
+        <a href="#about us"></a>
+      </div>
     </div>
+    <h2>ABOUT US</h>
+      <p>When you work with us,you are a part of a team of committed collaborators.All aspects pf our software
+        development process are integrated,interactive and agile.<br>Our approach unifies design ,development and
+        product management to creat exceptional products.</p>
+      <p>We start each project by understanding your business goals,the users needs and the product requirements.Then we
+        help translate them into effective and elegant solutions.</p><br><br><br>
+
+      <img src="images/s_image.jpg" style="width:100%">
+
+      <div id="serv">
+         <h2>SERVICES</h2>
+         <P>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.</P>
+         <p>The outcome of this scoping is a proposal or high-level statement of work.Based on your requirements,we can provide a complete offering or just the pieces you need.</p>
+        </div>
+
+
+
+
+      <script src="./js/jQuery.js"></script>
+      <script src="./js/js/scripts.js"></script>
+  </div>
 </body>
+
 </html>
