--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
       <div id="serv">
          <h2>SERVICES</h2>
          <P>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.</P>
-         <p>The outcome of this scoping is a proposal or high-level statement of work.Based on your requirements,we can provide a complete offering or just the pieces you need.</p>
+         The outcome of this scoping is a proposal or high-level statement of work.Based on your requirements,we can provide a complete offering or just the pieces you need.
         </div>
-
+        
+        <div id="services">
+        <h3>WHAT WE DO</h3>
+        <img src="images/design_icon.png">
+        <img src="images/dev_icon.png">
+        <img src="images/product_icon.png">
 
 
 
