--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-</head>
-<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 <link href="./css/css/styles.css" rel="stylesheet" type="text/css">
 <link href="styles.css" type="text/css" rel="stylesheet">
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 <body>
-  <div id="container">
+  <div id="container-fluid">
     <div class=main>
       <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg"
         style="width:100%"><br><br><br>
@@ -26,26 +26,44 @@
         <a href="#about us"></a>
       </div>
     </div>
-    <h2>ABOUT US</h>
-      <p>When you work with us,you are a part of a team of committed collaborators.All aspects pf our software
-        development process are integrated,interactive and agile.<br>Our approach unifies design ,development and
+    <h2>ABOUT US</h><br><br>
+      <p>When you work with us,you are a part of a team of committed collaborators.All aspects of our software evelopment process are integrated,interactive<br>and agile.
+        <br>Our approach unifies design ,development and
         product management to creat exceptional products.</p>
-      <p>We start each project by understanding your business goals,the users needs and the product requirements.Then we
-        help translate them into effective and elegant solutions.</p><br><br><br>
+      <p>We start each project by understanding your business goals,the users needs and the product requirements.<br>Then we
+        help translate them into effective and elegant solutions.</p><br>
 
-      <img src="images/s_image.jpg" style="width:100%">
+     <!-- <img src="images/s_image.jpg" style="width:100%"> -->
 
-      <div id="serv">
+       <div id="serv"> 
          <h2>SERVICES</h2>
-         <P>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.</P>
-         The outcome of this scoping is a proposal or high-level statement of work.Based on your requirements,we can provide a complete offering or just the pieces you need.
-        </div>
-        
-        <div id="services">
-        <h3>WHAT WE DO</h3>
+         <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.<br>
+         The outcome of this scoping is a proposal or high-level statement of work.<br>Based on your requirements,we can provide a complete offering or just the pieces you need.
+         </p>
+        </div><br>
+        <h3>WHAT WE DO</h3><br>
+        <div id="move">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="text-center">
         <img src="images/design_icon.png">
+        <h3>DESIGN</h3>
+      </div>
+      <p></p>
+      </div>
+
+      <div class="col-md-4">
         <img src="images/dev_icon.png">
+        <p>DEVELOPMENT</p>
+      </div>
+      
+      <div class="col-md-4">
         <img src="images/product_icon.png">
+        <p>PRODUCT MANAGEMENT</p>
+      </div>
+    </div>
+  </div>
+
 
 
 
