--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-<link href="./css/css/styles.css" rel="stylesheet" type="text/css">
-<link href="styles.css" type="text/css" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="./css/css/styles.css" rel="stylesheet" type="text/css">
+  <link href="styles.css" type="text/css" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
   <div id="container-fluid">
     <div class=main>
@@ -27,49 +29,75 @@
       </div>
     </div>
     <h2>ABOUT US</h><br><br>
-      <p>When you work with us,you are a part of a team of committed collaborators.All aspects of our software evelopment process are integrated,interactive<br>and agile.
+      <p>When you work with us,you are a part of a team of committed collaborators.All aspects of our software
+        evelopment process are integrated,interactive<br>and agile.
         <br>Our approach unifies design ,development and
         product management to creat exceptional products.</p>
-      <p>We start each project by understanding your business goals,the users needs and the product requirements.<br>Then we
+      <p>We start each project by understanding your business goals,the users needs and the product
+        requirements.<br>Then we
         help translate them into effective and elegant solutions.</p><br>
 
-     <!-- <img src="images/s_image.jpg" style="width:100%"> -->
+      <!-- <img src="images/s_image.jpg" style="width:100%"> -->
 
-       <div id="serv"> 
-         <h2>SERVICES</h2>
-         <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.<br>
-         The outcome of this scoping is a proposal or high-level statement of work.<br>Based on your requirements,we can provide a complete offering or just the pieces you need.
-         </p>
-        </div><br>
-        <h3>WHAT WE DO</h3><br>
-        <div id="move">
+      <div id="serv">
+        <h2>SERVICES</h2>
+        <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand
+          your product vision.<br>
+          The outcome of this scoping is a proposal or high-level statement of work.<br>Based on your requirements,we
+          can provide a complete offering or just the pieces you need.
+        </p>
+      </div><br>
+      <h3>WHAT WE DO</h3><br>
+      <div id="move">
         <div class="row">
           <div class="col-md-4">
             <div class="text-center">
-        <img src="images/design_icon.png">
-        <h3>DESIGN</h3>
+              <img src="images/design_icon.png">
+              <h3>DESIGN</h3>
+            </div>
+            <p>Our design practice offers a full range of services including branding strategy,interaction and visual
+              design and user experience testing. Throughout your project, our designers create and implement visual
+              designs and workflows solicit user feedback, and work with you to make sure what gets built is what is
+              needed.</p>
+          </div>
+
+          <div class="col-md-4">
+            <div class="text-center">
+              <img src="images/dev_icon.png">
+              <h3>DEVELOPMENT</h3>
+            </div>
+            <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. They
+              collaborate with your team to write, test, and improve code on a daily basis, using proven practices such
+              as test-driven development and pair programming.</p>
+          </div>
+
+
+          <div class="col-md-4">
+            <div class="text-center">
+              <img src="images/product_icon.png">
+              <h3>PRODUCT MANAGEMENT</h3>
+              <p>Planning and development is iterative. Because we are constantly coding and testing, the products we
+                build are always ready to go live.This iterative process allows for changes as business requirements
+                eveolve.</p>
+            </div>
+          </div>
+        </div>
+        <h3>PORTFOLIO</h3>
+        <img src="images/work4.jpg">
+        <img src="images/work3.jpg">
+        <img src="images/work2.jpg">
+        <img src="images/work1.jpg">
+        <img src="images/work5.jpg">
+        <img src="images/work6.jpg">
+        <img src="images/work7.jpg">
+        <img src="images/work8.jpg">
+        
+
+
+
+        <script src="./js/jQuery.js"></script>
+        <script src="./js/js/scripts.js"></script>
       </div>
-      <p></p>
-      </div>
-
-      <div class="col-md-4">
-        <img src="images/dev_icon.png">
-        <p>DEVELOPMENT</p>
-      </div>
-      
-      <div class="col-md-4">
-        <img src="images/product_icon.png">
-        <p>PRODUCT MANAGEMENT</p>
-      </div>
-    </div>
-  </div>
-
-
-
-
-      <script src="./js/jQuery.js"></script>
-      <script src="./js/js/scripts.js"></script>
-  </div>
 </body>
 
 </html>
