--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
           </div>
         </div>
         <h3>PORTFOLIO</h3>
+        <div class="col-md-4">
         <img src="images/work4.jpg">
         <img src="images/work3.jpg">
         <img src="images/work2.jpg">
@@ -91,7 +92,7 @@
         <img src="images/work6.jpg">
         <img src="images/work7.jpg">
         <img src="images/work8.jpg">
-        
+
 
 
 
