add styling in the portfolio images

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         </div>
         <h3>PORTFOLIO</h3>
         <div class="col-md-4">
+            <div class="text-center">
         <img src="images/work4.jpg">
         <img src="images/work3.jpg">
         <img src="images/work2.jpg">
