--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 </head>
 
 <body>
-  <div id="container-fluid">
     <div class=main>
       <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg"
-        style="width:100%"><br><br><br>
+        style="width:100%">
       <div id="logo">
         <img src="images/logo.png">
         <h1>WELCOME<br>TO DELANI STUDIO</h1>
@@ -28,7 +27,7 @@
         <a href="#about us"></a>
       </div>
     </div>
-    <h2>ABOUT US</h><br><br>
+    <h2>ABOUT US</h>
       <p>When you work with us,you are a part of a team of committed collaborators.All aspects of our software
         evelopment process are integrated,interactive<br>and agile.
         <br>Our approach unifies design ,development and
@@ -36,9 +35,6 @@
       <p>We start each project by understanding your business goals,the users needs and the product
         requirements.<br>Then we
         help translate them into effective and elegant solutions.</p><br>
-
-      <!-- <img src="images/s_image.jpg" style="width:100%"> -->
-
       <div id="serv">
         <h2>SERVICES</h2>
         <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand
@@ -49,7 +45,7 @@
       </div><br>
       <h3>WHAT WE DO</h3><br>
       <div id="move">
-        <div class="row">
+        <div class="container-fluid row">
           <div class="col-md-4">
             <div class="text-center">
               <img src="images/design_icon.png">
@@ -83,22 +79,27 @@
           </div>
         </div>
         <h3>PORTFOLIO</h3>
-        <div class="col-md-4">
+        <div>
             <div class="text-center">
-        <img src="images/work4.jpg">
-        <img src="images/work3.jpg">
-        <img src="images/work2.jpg">
-        <img src="images/work1.jpg">
-        <img src="images/work5.jpg">
-        <img src="images/work6.jpg">
-        <img src="images/work7.jpg">
-        <img src="images/work8.jpg">
-
+        <img src="images/work4.jpg" width="300">
+        <img src="images/work3.jpg" width="300">
+        <img src="images/work2.jpg" width="300">
+        <img src="images/work1.jpg" width="300">
+        </div>
+        <div>
+            <div class="text-center">
+        <img src="images/work5.jpg" width="300">
+        <img src="images/work6.jpg" width="300">
+        <img src="images/work7.jpg" width="300">
+        <img src="images/work8.jpg" width="300">
+        </div> 
 
 
 
         <script src="./js/jQuery.js"></script>
         <script src="./js/js/scripts.js"></script>
+      </div>
+      </div>
       </div>
 </body>
 
