--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <P style="color: whitesmoke">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
       </div>
       <div class="mouse">
-        <img src="images/mouse_click.png">
-        <a href="#about us"></a>
+        <a href="#one"><img src="images/mouse_click.png"></a>
       </div>
     </div>
+    <div id="one">
     <h2>ABOUT US</h>
       <p>When you work with us,you are a part of a team of committed collaborators.All aspects of our software
         evelopment process are integrated,interactive<br>and agile.
@@ -35,6 +35,7 @@
       <p>We start each project by understanding your business goals,the users needs and the product
         requirements.<br>Then we
         help translate them into effective and elegant solutions.</p><br>
+      </div>
       <div id="serv">
         <h2>SERVICES</h2>
         <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand
@@ -92,9 +93,10 @@
         <img src="images/work6.jpg" width="300">
         <img src="images/work7.jpg" width="300">
         <img src="images/work8.jpg" width="300">
-        </div> 
+        </div><br><br> 
 
-
+         <h4>CONTACT US</h4>
+         
 
         <script src="./js/jQuery.js"></script>
         <script src="./js/js/scripts.js"></script>
