add forms in the html at the footer

--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
         </div><br><br> 
 
          <h4>CONTACT US</h4>
+         <form>
+            <form>
+              <div id="form"></div>
+              <div class="col-md-4">
+                <div class="form-group">
+                  <label for="Name..."></label>
+                  <input type="text" class="form-control" placeholder="Name...">
+                </div> 
+                
+                <div class="form-group top-form">
+                    <label for="Email"></label>
+                    <input type="text" class="form-control" placeholder="Email...">
+                  </div>
+                </div>
          
 
         <script src="./js/jQuery.js"></script>
