add h5 at the footer of html

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                   <img src="images/pinterest.png">
                   <img src="images/flickr.png">
                 </div>
-                
+                <h5>DELANI STUDIO</h5>
+                <p
 
          
 
