add break tag after the h5 tag in the html

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   <img src="images/pinterest.png">
                   <img src="images/flickr.png">
                 </div>
-                <h5>DELANI STUDIO</h5>
+                <h5>DELANI STUDIO</h5><br>
                 <p>2019</p>
 
          
