worked on indetation errors in the html file

--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
   <link href="styles.css" type="text/css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/script.js"></script>
 </head>
 
 <body>
-    <div class=main>
-      <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg"
-        style="width:100%">
-      <div id="logo">
-        <img src="images/logo.png">
-        <h1>WELCOME<br>TO DELANI STUDIO</h1>
-        <P style="color: whitesmoke">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
-      </div>
-      <div class="mouse">
-        <a href="#one"><img src="images/mouse_click.png"></a>
-      </div>
+
+  <div class="main">
+    <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/backgrounds/h_img.jpg" style="width:100%">
+    <div id="logo">
+      <img src="images/logo.png">
+      <h1>WELCOME<br>TO DELANI STUDIO</h1>
+      <P style="color: whitesmoke">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</P>
     </div>
-    <div id="one">
+    <div class="mouse">
+      <a href="#one"><img src="images/mouse_click.png"></a>
+    </div>
+  </div>
+  <div id="one">
     <h2>ABOUT US</h>
       <p>When you work with us,you are a part of a team of committed collaborators.All aspects of our software
         evelopment process are integrated,interactive<br>and agile.
@@ -35,109 +37,113 @@
       <p>We start each project by understanding your business goals,the users needs and the product
         requirements.<br>Then we
         help translate them into effective and elegant solutions.</p><br>
-      </div>
-      <div id="serv">
-        <h2>SERVICES</h2>
-        <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand
-          your product vision.<br>
-          The outcome of this scoping is a proposal or high-level statement of work.<br>Based on your requirements,we
-          can provide a complete offering or just the pieces you need.
-        </p>
-      </div><br>
-      <h3>WHAT WE DO</h3><br>
-      <div id="move">
-        <div class="container-fluid row">
-          <div class="col-md-4">
-            <div class="text-center">
-              <img src="images/design_icon.png">
-              <h3>DESIGN</h3>
-            </div>
-            <p>Our design practice offers a full range of services including branding strategy,interaction and visual
-              design and user experience testing. Throughout your project, our designers create and implement visual
-              designs and workflows solicit user feedback, and work with you to make sure what gets built is what is
-              needed.</p>
-          </div>
-
-          <div class="col-md-4">
-            <div class="text-center">
-              <img src="images/dev_icon.png">
-              <h3>DEVELOPMENT</h3>
-            </div>
-            <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. They
-              collaborate with your team to write, test, and improve code on a daily basis, using proven practices such
-              as test-driven development and pair programming.</p>
-          </div>
-
-
-          <div class="col-md-4">
-            <div class="text-center">
-              <img src="images/product_icon.png">
-              <h3>PRODUCT MANAGEMENT</h3>
-              <p>Planning and development is iterative. Because we are constantly coding and testing, the products we
-                build are always ready to go live.This iterative process allows for changes as business requirements
-                eveolve.</p>
-            </div>
-          </div>
+  </div>
+  <div id="serv">
+    <h2>SERVICES</h2>
+    <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand
+      your product vision.<br>
+      The outcome of this scoping is a proposal or high-level statement of work.<br>Based on your requirements,we
+      can provide a complete offering or just the pieces you need.
+    </p>
+  </div><br>
+  <h3>WHAT WE DO</h3><br>
+  <div id="move">
+    <div class="container-fluid row">
+      <div class="col-md-4">
+        <div class="text-center">
+          <img src="images/design_icon.png">
+          <h3 id="design-pic">DESIGN</h3>
         </div>
-        <h3>PORTFOLIO</h3>
-        <div>
-            <div class="text-center">
+        <p class="design-a">Our design practice offers a full range of services including branding strategy,interaction
+          and visual
+          design and user experience testing. Throughout your project, our designers create and implement visual
+          designs and workflows solicit user feedback, and work with you to make sure what gets built is what is
+          needed.</p>
+      </div>
+
+      <div class="col-md-4">
+        <div class="text-center">
+          <img src="images/dev_icon.png">
+          <h3 id="develop-pic">DEVELOPMENT</h3>
+        </div>
+        <p class="develop-a ">All engineers are fluent in the latest enterprise, mobile and web development
+          technologies. They
+          collaborate with your team to write, test, and improve code on a daily basis, using proven practices such
+          as test-driven development and pair programming.</p>
+      </div>
+
+
+      <div class="col-md-4">
+        <div class="text-center">
+          <img src="images/product_icon.png">
+          <h3>PRODUCT MANAGEMENT</h3>
+          <p class="prod-a">Planning and development is iterative. Because we are constantly coding and testing, the
+            products we
+            build are always ready to go live.This iterative process allows for changes as business requirements
+            eveolve.</p>
+        </div>
+      </div>
+    </div>
+    <br><br>
+    <h3>PORTFOLIO</h3>
+    <div>
+      <div class="text-center">
         <img src="images/work4.jpg" width="300">
         <img src="images/work3.jpg" width="300">
         <img src="images/work2.jpg" width="300">
         <img src="images/work1.jpg" width="300">
-        </div>
-        <div>
-            <div class="text-center">
-        <img src="images/work5.jpg" width="300">
-        <img src="images/work6.jpg" width="300">
-        <img src="images/work7.jpg" width="300">
-        <img src="images/work8.jpg" width="300">
-        </div><br><br> 
+      </div>
+    </div>
+    <div class="text-center">
+      <img src="images/work5.jpg" width="300">
+      <img src="images/work6.jpg" width="300">
+      <img src="images/work7.jpg" width="300">
+      <img src="images/work8.jpg" width="300">
+    </div><br><br>
 
-         <h4>CONTACT US</h4>
-         <form>
-            <form>
-          
-              <div class="form column small-6">
-                  <label for="Name..."></label>
-                  <input style="font-family: 'Aladin'," cursive; type="text" class="form-control" id="contactform" placeholder="Name...">
-                </div> 
-                
-                <div class="form column small-6">
-                    <label for="Email"></label>
-                    <input type="email" class="form-control" id="number" placeholder="Email...">
-                  </div><br>
-                  <div class="columns form-12">
-                    <textarea name="comments" id="number" rows="5" cols="15" wrap="physical" placeholder="your message here..."></textarea>
-                    <button boarder-radius="20px" class="button" type="submit">submit</button>
-                  </div>
-                </div>
-              </div>
-              <div class="social">
-              <div class="row">
-                <div class="column small-12 media">
-                  <img src="/home/moringa/Desktop/Delani-Studio/images/twitter.png">
-                  <img src="images/dribble.png">
-                  <img src="images/facebook.png">
-                  <img src="images/g_plus.png">
-                  <img src="images/skype.png">
-                  <img src="images/you_tube.png">
-                  <img src="images/behance.png">
-                  <img src="images/pinterest.png">
-                  <img src="images/flickr.png">
-                </div>
-              </div>
-              </div>
-              <div class="del">
-                <h5>DELANI STUDIO</h5><br>
-                <p>2019</p>
-              </div>
-        <script src="./js/jQuery.js"></script>
-        <script src="./js/js/scripts.js"></script>
+    <form class="contact">
+      <h4>CONTACT US</h4>
+      <div class="text">
+        <div class="form-row">
+          <div class="col-md-4">
+            <input type="text" class="form-control" placeholder="Name...">
+          </div>
+          <div class="col-md-4">
+            <input type="text" class="form-control" placeholder="Email...">
+            <div class="form-row col-md-12">
+              <label for="exampleFormControlTextarea1"></label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <input type="submit">
+            </div>
+          </div>
+        </div>
       </div>
+    </form>
+
+    <div class="social">
+      <div class="row">
+        <img src="images/twitter.png">
+        <img src="images/dribble.png">
+        <img src="images/facebook.png">
+        <img src="images/g_plus.png">
+        <img src="images/skype.png">
+        <img src="images/you_tube.png">
+        <img src="images/behance.png">
+        <img src="images/pinterest.png">
+        <img src="images/flickr.png">
       </div>
-      </div>
+    </div>
+  </div>
+
+  <h5>DELANI STUDIO</h5>
+  <div class="del">
+    <p>2019</p>
+  </div>
+  <script src="./js/jQuery.js"></script>
+  <script src="./js/js/scripts.js"></script>
+  </div>
+  </div>
+  </div>
 </body>
 
 </html>
