add stylings to class social in the styling css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link href="styles.css" type="text/css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="js/jquery-3.4.1.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/jQuery.js"></script>
+  <script src="js/scripts.js"></script>
 </head>
 
 <body>
@@ -50,9 +50,9 @@
   <div id="move">
     <div class="container-fluid row">
       <div class="col-md-4">
-        <div class="text-center">
-          <img src="images/design_icon.png">
-          <h3 id="design-pic">DESIGN</h3>
+        <div class="text-center" id="design-pic">
+          <img  src="images/design_icon.png">
+          <h3 >DESIGN</h3>
         </div>
         <p class="design-a">Our design practice offers a full range of services including branding strategy,interaction
           and visual
@@ -62,9 +62,9 @@
       </div>
 
       <div class="col-md-4">
-        <div class="text-center">
+        <div class="text-center" id="develop-pic">
           <img src="images/dev_icon.png">
-          <h3 id="develop-pic">DEVELOPMENT</h3>
+          <h3 >DEVELOPMENT</h3>
         </div>
         <p class="develop-a ">All engineers are fluent in the latest enterprise, mobile and web development
           technologies. They
@@ -74,33 +74,33 @@
 
 
       <div class="col-md-4">
-        <div class="text-center">
+        <div class="text-center" id="prod-pic">
           <img src="images/product_icon.png">
           <h3>PRODUCT MANAGEMENT</h3>
+        </div>
           <p class="prod-a">Planning and development is iterative. Because we are constantly coding and testing, the
             products we
             build are always ready to go live.This iterative process allows for changes as business requirements
-            eveolve.</p>
+            evolve.</p>
         </div>
       </div>
-    </div>
-    <br><br>
+      <div class="port">
     <h3>PORTFOLIO</h3>
-    <div>
       <div class="text-center">
         <img src="images/work4.jpg" width="300">
         <img src="images/work3.jpg" width="300">
         <img src="images/work2.jpg" width="300">
         <img src="images/work1.jpg" width="300">
       </div>
-    </div>
+    
     <div class="text-center">
       <img src="images/work5.jpg" width="300">
       <img src="images/work6.jpg" width="300">
       <img src="images/work7.jpg" width="300">
       <img src="images/work8.jpg" width="300">
-    </div><br><br>
-
+    </div>
+  </div>
+  </div>
     <form class="contact">
       <h4>CONTACT US</h4>
       <div class="text">
@@ -119,7 +119,6 @@
         </div>
       </div>
     </form>
-
     <div class="social">
       <div class="row">
         <img src="images/twitter.png">
@@ -133,7 +132,7 @@
         <img src="images/flickr.png">
       </div>
     </div>
-  </div>
+
 
   <h5>DELANI STUDIO</h5>
   <div class="del">
