add text align and padding to h5 tag in the styles

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <img src="images/work8.jpg" width="300">
     </div>
   </div>
-  </div>
+  </div><br><br>
     <form class="contact">
       <h4>CONTACT US</h4>
       <div class="text">
