--- a/index.html
+++ b/index.html
@@ -47,52 +47,52 @@
     </p>
   </div><br>
   <h3>WHAT WE DO</h3><br>
-  <div id="move">
-    <div class="container-fluid row">
-      <div class="col-md-4">
-        <div class="text-center" id="design-pic">
-          <img  src="images/design_icon.png">
-          <h3 >DESIGN</h3>
-        </div>
-        <p class="design-a">Our design practice offers a full range of services including branding strategy,interaction
-          and visual
-          design and user experience testing. Throughout your project, our designers create and implement visual
-          designs and workflows solicit user feedback, and work with you to make sure what gets built is what is
-          needed.</p>
+  <!-- <div id="move"> -->
+  <div class="container-fluid row">
+    <div class="col-md-4">
+      <div class="text-center" id="design-pic">
+        <img src="images/design_icon.png">
+        <h3>DESIGN</h3>
       </div>
+      <p class="design-a">Our design practice offers a full range of services including branding strategy,interaction
+        and visual
+        design and user experience testing. Throughout your project, our designers create and implement visual
+        designs and workflows solicit user feedback, and work with you to make sure what gets built is what is
+        needed.</p>
+    </div>
 
-      <div class="col-md-4">
-        <div class="text-center" id="develop-pic">
-          <img src="images/dev_icon.png">
-          <h3 >DEVELOPMENT</h3>
-        </div>
-        <p class="develop-a ">All engineers are fluent in the latest enterprise, mobile and web development
-          technologies. They
-          collaborate with your team to write, test, and improve code on a daily basis, using proven practices such
-          as test-driven development and pair programming.</p>
+    <div class="col-md-4">
+      <div class="text-center" id="develop-pic">
+        <img src="images/dev_icon.png">
+        <h3>DEVELOPMENT</h3>
       </div>
+      <p class="develop-a ">All engineers are fluent in the latest enterprise, mobile and web development
+        technologies. They
+        collaborate with your team to write, test, and improve code on a daily basis, using proven practices such
+        as test-driven development and pair programming.</p>
+    </div>
 
 
-      <div class="col-md-4">
-        <div class="text-center" id="prod-pic">
-          <img src="images/product_icon.png">
-          <h3>PRODUCT MANAGEMENT</h3>
-        </div>
-          <p class="prod-a">Planning and development is iterative. Because we are constantly coding and testing, the
-            products we
-            build are always ready to go live.This iterative process allows for changes as business requirements
-            evolve.</p>
-        </div>
+    <div class="col-md-4">
+      <div class="text-center" id="prod-pic">
+        <img src="images/product_icon.png">
+        <h3>PRODUCT MANAGEMENT</h3>
       </div>
-      <div class="port">
+      <p class="prod-a">Planning and development is iterative. Because we are constantly coding and testing, the
+        products we
+        build are always ready to go live.This iterative process allows for changes as business requirements
+        evolve.</p>
+    </div>
+  </div>
+  <div class="port">
     <h3>PORTFOLIO</h3>
-      <div class="text-center">
-        <img src="images/work4.jpg" width="300">
-        <img src="images/work3.jpg" width="300">
-        <img src="images/work2.jpg" width="300">
-        <img src="images/work1.jpg" width="300">
-      </div>
-    
+    <div class="text-center">
+      <img src="images/work4.jpg" width="300">
+      <img src="images/work3.jpg" width="300">
+      <img src="images/work2.jpg" width="300">
+      <img src="images/work1.jpg" width="300">
+    </div>
+
     <div class="text-center">
       <img src="images/work5.jpg" width="300">
       <img src="images/work6.jpg" width="300">
@@ -101,39 +101,40 @@
     </div>
   </div>
   </div><br><br>
-    <form class="contact">
-      <h4>CONTACT US</h4>
-      <div class="text">
-        <div class="form-row">
+  <form class="contact">
+    <h4>CONTACT US</h4>
+    <div class="row">
+      <div class="col-md-2">
+        <div class="col-md-8">
           <div class="col-md-4">
-            <input type="text" class="form-control" placeholder="Name...">
+            <input type="text" class="form-control" placeholder="Name..." name="Name">
           </div>
-          <div class="col-md-4">
-            <input type="text" class="form-control" placeholder="Email...">
-            <div class="form-row col-md-12">
-              <label for="exampleFormControlTextarea1"></label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              <input type="submit">
-            </div>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Email..." name="email">
           </div>
         </div>
-      </div>
-    </form>
-    <div class="social">
-      <div class="row">
-        <img src="images/twitter.png">
-        <img src="images/dribble.png">
-        <img src="images/facebook.png">
-        <img src="images/g_plus.png">
-        <img src="images/skype.png">
-        <img src="images/you_tube.png">
-        <img src="images/behance.png">
-        <img src="images/pinterest.png">
-        <img src="images/flickr.png">
-      </div>
+
+        <div class="form-group" id="hold">
+          <textarea class="form-control" id="textarea" rows="9" placeholder="your Message..." name="message"></textarea>
+        </div>
+        <button type="submit" id="tranparent" class="btn btn-outline-light btn-lg btn-block">Submit</button>
+  </form>
+</div>
+  </div>
+  </div>
+  <div class="social">
+    <div class="row">
+      <img src="images/twitter.png">
+      <img src="images/dribble.png">
+      <img src="images/facebook.png">
+      <img src="images/g_plus.png">
+      <img src="images/skype.png">
+      <img src="images/you_tube.png">
+      <img src="images/behance.png">
+      <img src="images/pinterest.png">
+      <img src="images/flickr.png">
     </div>
-
-
+  </div>
   <h5>DELANI STUDIO</h5>
   <div class="del">
     <p>2019</p>
@@ -144,5 +145,4 @@
   </div>
   </div>
 </body>
-
 </html>
