--- a/index.html
+++ b/index.html
@@ -104,24 +104,33 @@
   <form class="contact">
     <h4>CONTACT US</h4>
     <div class="row">
-      <div class="col-md-2">
+        <div class="col-md-2"></div>
         <div class="col-md-8">
-          <div class="col-md-4">
-            <input type="text" class="form-control" placeholder="Name..." name="Name">
-          </div>
-          <div class="col">
-            <input type="text" class="form-control" placeholder="Email..." name="email">
-          </div>
-        </div>
+            <form id="jambo" name="form2" onsubmit="return contact()">
+                <div class="row">
+                    <div class="col" id="jambo">
+                        <input type="text" class="form-control" id="transparent" placeholder="Name"
+                            name="name">
+                    </div>
+                    <div class="col" id="jambo">
+                        <input type="text" class="form-control" id="transparent" placeholder="Email"
+                            name="email">
+                    </div>
+                </div>
 
-        <div class="form-group" id="hold">
-          <textarea class="form-control" id="textarea" rows="9" placeholder="your Message..." name="message"></textarea>
+                <div class="form-group" id="jambo"><br>
+
+                    <textarea id="transparent" id="message" rows="9" placeholder="Your Message here..."
+                        name="message"></textarea>
+                </div>
+                <button type="submit" id="transparency"
+                    class="btn btn-outline-light btn-lg btn-block">Submit</button>
+            </form>
         </div>
-        <button type="submit" id="tranparent" class="btn btn-outline-light btn-lg btn-block">Submit</button>
-  </form>
-</div>
-  </div>
-  </div>
+    </div>
+    <div class="col-md-2"></div>
+</div><br><br>
+
   <div class="social">
     <div class="row">
       <img src="images/twitter.png">
@@ -144,5 +153,7 @@
   </div>
   </div>
   </div>
+  </body>
 </body>
+
 </html>
