--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <script src="js/jQuery.js"></script>
   <script src="js/scripts.js"></script>
 </head>
-
 <body>
 
   <div class="main">
@@ -54,8 +53,8 @@
         <img src="images/design_icon.png">
         <h3>DESIGN</h3>
       </div>
-      <p class="design-a">Our design practice offers a full range of services including branding strategy,interaction
-        and visual
+        <p class="design-a">Our design practice offers a full range of services including branding strategy,interaction
+          and visual
         design and user experience testing. Throughout your project, our designers create and implement visual
         designs and workflows solicit user feedback, and work with you to make sure what gets built is what is
         needed.</p>
@@ -83,21 +82,89 @@
         build are always ready to go live.This iterative process allows for changes as business requirements
         evolve.</p>
     </div>
-  </div>
-  <div class="port">
-    <h3>PORTFOLIO</h3>
-    <div class="text-center">
-      <img src="images/work4.jpg" width="300">
-      <img src="images/work3.jpg" width="300">
-      <img src="images/work2.jpg" width="300">
-      <img src="images/work1.jpg" width="300">
-    </div>
+  </div><br>  
 
-    <div class="text-center">
-      <img src="images/work5.jpg" width="300">
-      <img src="images/work6.jpg" width="300">
-      <img src="images/work7.jpg" width="300">
-      <img src="images/work8.jpg" width="300">
+    <h3>PORTFOLIO</h3>
+    <div class="text-center" id="pads">
+<div class="row col-space">
+  <div class="col-md-3">
+    <div class="pro1">
+        <img src="images/work4.jpg" width="300" class="img-fluid">
+        <div class="project1">
+        <p id="project1"> PROJECT 1</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="col-md-3">
+    <div class="pro2">
+        <img src="images/work3.jpg" width="300" class="img-fluid">
+        <div class="project2">
+        <p id="project2"> PROJECT 2</p>
+    </div>
+  </div>
+</div>
+      
+
+<div class="col-md-3">
+    <div class="pro3">
+        <img src="images/work2.jpg" width="300" class="img-fluid">
+        <div class="project3">
+        <p id="project3"> PROJECT 3</p>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="col-md-3">
+    <div class="pro4">
+        <img src="images/work1.jpg" width="300" class="img-fluid">
+        <div class="project4">
+        <p id="project4"> PROJECT 4</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="row col-space">
+    <div class="col-md-3">
+      <div class="pro5">
+          <img src="images/work5.jpg" width="300" class="img-fluid">
+          <div class="project5">
+          <p id="project5"> PROJECT 5</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-3">
+      <div class="pro6">
+          <img src="images/work6.jpg" width="300" class="img-fluid">
+          <div class="project6">
+          <p id="project6"> PROJECT 6</p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="col-md-3">
+      <div class="pro7">
+          <img src="images/work7.jpg" width="300" class="img-fluid">
+          <div class="project7">
+          <p id="project7"> PROJECT 7</p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="col-md-3">
+      <div class="pro8">
+          <img src="images/work8.jpg" width="300" class="img-fluid">
+          <div class="project8">
+          <p id="pro"> PROJECT 8</p>
+      </div>
+    </div>
+  </div>    
     </div>
   </div>
   </div><br><br>
